--- a/stack.yaml
+++ b/stack.yaml
@@ -1,5 +1,6 @@
-resolver: lts-16.22
+resolver: lts-18.1
 
 nix:
+  path: ["nixpkgs=https://github.com/NixOS/nixpkgs/tarball/860b56be91fb874d48e23a950815969a7b832fbc"]
   pure: false
   packages: [zlib]
